# P2PVideo

./: README.md
client/: test.js  test.ts
server/: database.py  login.db  login.py  pyproject.toml  server.py
server/videochat/: test.py
