[tool.poetry]
name = "videochat"
version = "0.1.0"
description = ""
authors = ["Jay Chen <jaycc@seas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
fastapi = "^0.111.0"
bcrypt = "^4.1.3"
fastapi-jwt = "^0.3.0"
authlib = "^1.3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
